# XBinaryExplorer

./: .gitmodules  CMakeLists.txt  README.md  THANKS.md  changelog.txt
.github/workflows/: builder.yml
packaging/windows/: build_portable_windows.cmd
res/: readme.txt
res/linux/: xbinaryexplorer.desktop.in
res/windows/: resource.rc  resource_icon.rc
run/: build.bat
src/: CMakeLists.txt  global.h
src/gui/: CMakeLists.txt  dialogabout.cpp  guimainwindow.ui
